# ECE_4574

./: README.md  component.drawio  desc
assignments/HW1/: CMakeLists.txt  HW1.files  flipcoder.h  main  main.cpp  otpcoder.cpp
assignments/HW1/HW2/: CMakeLists.txt  HW2.docx  flipcoder.cpp  invertcasecoder.cpp  invertcasecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  otpcoder.h
assignments/HW1/build-HW2-Qt_6_2_4_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja
assignments/HW1/build-HW2-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-23e1bee0a4ba8723a3e9.json  codemodel-v2-4c9e40d4e19573e666e1.json  directory-.-Debug-ebbd830fe75adba3d0dd.json  index-2023-10-09T14-05-14-0438.json  target-HW2-Debug-3e81fee23d36819c97fa.json  target-HW2_autogen-Debug-8e6db5d9b79fafffdc1a.json
assignments/HW1/build-HW2-Qt_6_2_4_for_macOS-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-9071eb28a173a679dfa5.json  directory-.-Debug-7a2c9efc5504b005fa04.json  index-2023-10-09T14-04-40-0598.json  target-HW2-Debug-70ca3b2e0ff50511ec37.json
assignments/HW1/build-HW2-Qt_6_2_4_for_macOS-Debug/HW2_autogen/: deps
assignments/HW1/build-HW2-Qt_6_2_4_for_macOS-Debug/HW2_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
assignments/HW2/: CMakeLists.txt  HW2.docx  base64coder.cpp  base64coder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  otpcoder.cpp  otpcoder.h
assignments/HW3/: .HW3.pro.swp  CMakeLists.txt  Coder.cpp  Coder.h  HW3.pro  base64coder.cpp  base64coder.h  coderfactory.cpp  coderfactory.h  compositecoder.cpp  compositecoder.h  (+13 more)
(+86 files in other folders)
